# romaji

./: .gitignore  Cargo.toml  README.md
bench/: Cargo.toml  aozora.sh
bench/src/: lib.rs  main.rs
bench/text/: neko.txt  ningen.txt  romaji.txt
src/: error.rs  lib.rs  map.rs  parse.rs  romaji.rs  rule.rs
src/convert/: hiragana_to_katakana.rs  kana_to_romaji.rs  katakana_to_hiragana.rs  katakana_to_romaji.rs  mod.rs  romaji_to_kana.rs  romaji_to_katakana.rs
tests/: lib.rs
