[package]
name = "romaji"
version = "0.1.1"
authors = ["uzimith <uzimith.x9@gmail.com>"]
description = "Romaji-Kana transliterator"
repository = "https://github.com/uzimith/romaji"
documentation = "https://docs.rs/romaji"
keywords = ["japanese", "romaji", "hiragana"]
license = "MIT"

[dependencies]
combine = "3.0.0-alpha"
log = "0.3"
env_logger = "0.4"
lazy_static = "0.2"
